adding and changing comments for another 10 problems